[package]
name = "pink-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
error_reporting = ["sentry", "sentry-actix"]
color = ["env_logger/termcolor"]

[dependencies]
# core dependencies
dotenv = "0.15.0"
# extra dependecies
rand = "0.8"

# core dependencies
[dependencies.actix-web]
version = "4"

[dependencies.sentry]
version = "0.25"
optional = true
default-features = false
features = ["backtrace", "contexts", "panic", "reqwest", "rustls"]

[dependencies.sentry-actix]
version = "0.25"
optional = true

[dependencies.log]
version = "0.4"
features = ["release_max_level_info"]

[dependencies.env_logger]
version = "0.9"
default_features = false
features = ["atty", "humantime"]

# extra dependencies
[dependencies.image]
version = "0.24.1"
#default-features = false
#features = ["png", "jpeg"]

[dependencies.imageproc]
version = "0.22.0"
git = "https://github.com/image-rs/imageproc"
# image 0.24 support
rev = "b7942657b1a370fc485507693ed4df1f8a116cb7"
default-features = false

[dependencies.rusttype]
version = "0.9.2"

[profile.release]
codegen-units = 1
lto = true
panic = 'unwind'
